--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpinLoot ($SPNL) — Spin, Win, Repeat</title>
+    <title>SpinLoot ($SPIN) — Spin, Win, Repeat</title>
     <meta name="description" content="SpinLoot is a Solana-powered spin-to-win Telegram game with instant payouts, leaderboards, and meme jackpots." />
   </head>
   <body class="bg-casino-bg text-white">
