--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>SpinLoot ($SPIN) — Spin, Win, Repeat</title>
     <meta name="description" content="SpinLoot is a Solana-powered spin-to-win Telegram game with instant payouts, leaderboards, and meme jackpots." />
   </head>
-  <body class="bg-casino-bg text-white">
+  <body class=" text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
