--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/logo.jpg" />
+    <link rel="icon" href="/logo.jpg" />
     <title>SpinLoot ($SPIN) — Spin, Win, Repeat</title>
     <meta name="description" content="SpinLoot is a Solana-powered spin-to-win Telegram game with instant payouts, leaderboards, and meme jackpots." />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SpinLoot ($SPIN) — Spin, Win, Repeat">
+    <meta name="twitter:description" content="SpinLoot is a Solana-powered spin-to-win Telegram game with instant payouts, leaderboards, and meme jackpots.">
+    <meta name="twitter:image" content="/casino.png">
+    <meta name="twitter:url" content="https://spinloot.com">
+    <meta name="twitter:site" content="@spinloot">
+    <meta name="twitter:creator" content="@spinloot">
   </head>
   <body class=" text-white">
     <div id="root"></div>
