--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="SpinLoot ($SPIN) — Spin, Win, Repeat">
     <meta name="twitter:description" content="SpinLoot is a Solana-powered spin-to-win Telegram game with instant payouts, leaderboards, and meme jackpots.">
     <meta name="twitter:image" content="/casino.png">
-    <meta name="twitter:url" content="https://spinloot.com">
+    <meta name="twitter:url" content="https://www.spinloot.co">
     <meta name="twitter:site" content="@spinloot">
     <meta name="twitter:creator" content="@spinloot">
   </head>
